--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@ align=’center’>
 		</tr>
 	</tbody>
 </table>
-<img src="C:\Users\AdminNADIP\Desktop\Виноградова\даа\да.jpeg">
+<img src="да.jpg">
 </body> 
 </html>
